--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -17,124 +17,126 @@
 <!-- header -->
 <header class="header" id="header">
     <div class="main-logo">
-        <img src="./img/main-logo.png" alt="main-logo">
+        <img src="./img/main-logo.png" alt="main-logo" class="flex">
     </div>
-    <ul class="gnb">
-        <li class="gnb__item">
-            <a href="#" class="gnb__menu icon">
-                <img src="./img/icon-shopping-bag.png" alt="shopping-bag-icon">
-            </a>
-        </li>
-        <li class="gnb__item">
-            <a href="#" class="gnb__menu">WOMAN</a>
-            <div class="gnb__subbox">
-                <div class="gnb__subitem-first">
-                    <ul>
-                        <li>
-                            <b>DISCOVER</b>
-                                <ul>
-                                    <li><a href="#">Newnees</a></li>
-                                    <li><a href="#">Sneakerhead</a></li>
-                                    <li><a href="#">Pride</a></li>
-                                    <li><a href="#">Kids</a></li>
-                                </ul>
-                        </li>
-                    </ul>
+    <div class="gnb__container">
+        <ul class="gnb flex">
+            <li class="gnb__item">
+                <a href="#" class="gnb__menu">
+                    <img src="./img/icon-shopping-bag.png" alt="shopping-bag-icon" class="icon">
+                </a>
+            </li>
+            <li class="gnb__item">
+                <a href="#" class="gnb__menu"><b>WOMAN</b></a>
+                <div class="gnb__subbox">
+                    <div class="gnb__subitem-first">
+                        <ul>
+                            <li>
+                                <b>DISCOVER</b>
+                                    <ul>
+                                        <li><a href="#">Newnees</a></li>
+                                        <li><a href="#">Sneakerhead</a></li>
+                                        <li><a href="#">Pride</a></li>
+                                        <li><a href="#">Kids</a></li>
+                                    </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="gnb__subitem-second">
+                        <ul>
+                            <li>
+                                <b>READYTOWEAR</b>
+                                    <ul>
+                                        <li><a href="#">Tops & Shits</a></li>
+                                        <li><a href="#">Outerwear</a></li>
+                                        <li><a href="#">Pants & skirts</a></li>
+                                        <li><a href="#">Swimwear</a></li>
+                                        <li><a href="#">Underwear</a></li>
+                                    </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="gnb__subitem-third">
+                        <ul>
+                            <li>
+                                <b>SHOES</b>
+                                    <ul>
+                                        <li><a href="#">X-Pander</a></li>
+                                        <li><a href="#">Triple S</a></li>
+                                        <li><a href="#">Track</a></li>
+                                        <li><a href="#">Pumps & Mules</a></li>
+                                        <li><a href="#">Botts</a></li>
+                                    </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="gnb__subitem-second">
-                    <ul>
-                        <li>
-                            <b>READYTOWEAR</b>
-                                <ul>
-                                    <li><a href="#">Tops & Shits</a></li>
-                                    <li><a href="#">Outerwear</a></li>
-                                    <li><a href="#">Pants & skirts</a></li>
-                                    <li><a href="#">Swimwear</a></li>
-                                    <li><a href="#">Underwear</a></li>
-                                </ul>
-                        </li>
-                    </ul>
+            </li>
+            <li class="gnb__item">
+                <a href="#" class="gnb__menu"><b>MAN</b></a>
+                <div class="gnb__subbox">
+                    <div class="gnb__subitem-first">
+                        <ul>
+                            <li>
+                                <b>DISCOVER</b>
+                                    <ul>
+                                        <li><a href="#">Newnees</a></li>
+                                        <li><a href="#">Sneakerhead</a></li>
+                                        <li><a href="#">Pride</a></li>
+                                        <li><a href="#">Kids</a></li>
+                                    </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="gnb__subitem-second">
+                        <ul>
+                            <li>
+                                <b>READYTOWEAR</b>
+                                    <ul>
+                                        <li><a href="#">Tops & Shits</a></li>
+                                        <li><a href="#">Outerwear</a></li>
+                                        <li><a href="#">Pants & skirts</a></li>
+                                        <li><a href="#">Swimwear</a></li>
+                                        <li><a href="#">Underwear</a></li>
+                                    </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="gnb__subitem-third">
+                        <ul>
+                            <li>
+                                <b>SHOES</b>
+                                    <ul>
+                                        <li><a href="#">X-Pander</a></li>
+                                        <li><a href="#">Triple S</a></li>
+                                        <li><a href="#">Track</a></li>
+                                        <li><a href="#">Pumps & Mules</a></li>
+                                        <li><a href="#">Botts</a></li>
+                                    </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="gnb__subitem-third">
-                    <ul>
-                        <li>
-                            <b>SHOES</b>
-                                <ul>
-                                    <li><a href="#">X-Pander</a></li>
-                                    <li><a href="#">Triple S</a></li>
-                                    <li><a href="#">Track</a></li>
-                                    <li><a href="#">Pumps & Mules</a></li>
-                                    <li><a href="#">Botts</a></li>
-                                </ul>
-                        </li>
-                    </ul>
+            </li>
+            <li class="gnb__item">
+                <a href="#" class="gnb__menu"><b>ALL</b></a>
+                <div class="gnb__subbox">
+                    <div class="gnb__subitem-first">
+                        <ul>
+                            <li>
+                                <a href="#"><b>COLLECTIONS</b></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="gnb__item">
-            <a href="#" class="gnb__menu">MAN</a>
-            <div class="gnb__subbox">
-                <div class="gnb__subitem-first">
-                    <ul>
-                        <li>
-                            <b>DISCOVER</b>
-                                <ul>
-                                    <li><a href="#">Newnees</a></li>
-                                    <li><a href="#">Sneakerhead</a></li>
-                                    <li><a href="#">Pride</a></li>
-                                    <li><a href="#">Kids</a></li>
-                                </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="gnb__subitem-second">
-                    <ul>
-                        <li>
-                            <b>READYTOWEAR</b>
-                                <ul>
-                                    <li><a href="#">Tops & Shits</a></li>
-                                    <li><a href="#">Outerwear</a></li>
-                                    <li><a href="#">Pants & skirts</a></li>
-                                    <li><a href="#">Swimwear</a></li>
-                                    <li><a href="#">Underwear</a></li>
-                                </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="gnb__subitem-third">
-                    <ul>
-                        <li>
-                            <b>SHOES</b>
-                                <ul>
-                                    <li><a href="#">X-Pander</a></li>
-                                    <li><a href="#">Triple S</a></li>
-                                    <li><a href="#">Track</a></li>
-                                    <li><a href="#">Pumps & Mules</a></li>
-                                    <li><a href="#">Botts</a></li>
-                                </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </li>
-        <li class="gnb__item">
-            <a href="#" class="gnb__menu">ALL</a>
-            <div class="gnb__subbox">
-                <div class="gnb__subitem-first">
-                    <ul>
-                        <li>
-                            <a href="#"><b>COLLECTIONS</b></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </li>
-        <li class="gnb__item">
-            <a href="#" class="gnb__menu icon">
-                <img src="./img/icon-search.png" alt="search-icon">
-            </a>
-        </li>
-    </ul>
+            </li>
+            <li class="gnb__item">
+                <a href="#" class="gnb__menu">
+                    <img src="./img/icon-search.png" alt="search-icon" class="icon">
+                </a>
+            </li>
+        </ul>
+    </div>
 </header>
 <!-- section.mainbanner -->
 <section class="main__banner" id="main__banner">
@@ -268,7 +270,7 @@
 <section class="online-service">
     <ul>
         <li>
-            <img src="./img/icon-package.png" alt="packageIcon">
+            <img src="./img/icon-package.png" alt="packageIcon" class="icon">
             <h3>무료배송</h3>
             <p>
                 발렌시아가는 모든 주문 건에 대해 무료로 배송 서비스를 제공합니다.
@@ -280,7 +282,7 @@
             </p>
         </li>
         <li>
-            <img src="./img/icon-giftbox.png" alt="giftboxIcon">
+            <img src="./img/icon-giftbox.png" alt="giftboxIcon" class="icon">
             <h3>선물 포장</h3>
             <p>
                 고객님의 기프트는 발렌시아가 박스에 담겨 작성하신 개인 메시지와 함께 배송됩니다.
@@ -290,7 +292,7 @@
             </p>
         </li>
         <li>
-            <img src="./img/icon-replay.png" alt="replayIcon">
+            <img src="./img/icon-replay.png" alt="replayIcon" class="icon">
             <h3>7일 이내 무료 반품</h3>
             <p>
                 제품 수령 후 7일 이내에 무료 반품이 가능합니다. 
@@ -332,9 +334,9 @@
                 <li>
                     <h2>SNS</h2>
                     <div class="footer__icon">
-                        <img src="./img/icon-facebook.png" alt="facebookImg">
-                        <img src="./img/icon-twitter.png" alt="twitterImg">
-                        <img src="./img/icon-instagram.png" alt="instagramImg">
+                        <img src="./img/icon-facebook.png" alt="facebookImg" class="icon">
+                        <img src="./img/icon-twitter.png" alt="twitterImg" class="icon">
+                        <img src="./img/icon-instagram.png" alt="instagramImg" class="icon">
                     </div>
                 </li>
             </ul>
