--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -140,59 +140,62 @@
 </header>
 <!-- section.mainbanner -->
 <section class="main__banner" id="main__banner">
-    <img src="./img/main-banner1.jpg" alt="mainBanner1">
+    <!-- <img src="./img/main-banner1.jpg" alt="mainBanner1"> -->
     <!-- <img src="./img/main-banner2.jpg" alt="mainBanner2"> -->
-    <!-- <img src="./img/main-banner3.jpg" alt="mainBanner3"> -->
+    <img src="./img/main-banner3.jpg" alt="mainBanner3">
 </section>
 <!-- section.community -->
-<section class="cummunity" id="community">
-    <div class="community__gallery" id="community__gallery">
-        <ul>
-            <li>
-                <img src="./img/community-img-1.jpg" alt="community-img1">
-            </li>
-            <li>
-                <img src="./img/community-img-2.jpg" alt="community-img2">
-            </li>
-            <li>
-                <img src="./img/community-img-3.jpg" alt="community-img3">
-            </li>
-            <li>
-                <img src="./img/community-img-4.jpg" alt="community-img4">
-            </li>
-        </ul>
-    </div>
-    <div class="community__info" id="community__info">
-        <ul>
-            <li>
-                <h2>발렌시아가 타탄 체크 자이언트 로고 더블 울 스카프 그린</h2>
-                    <ul>
-                        <li>820,000</li>
-                        <li>구매하기</li>
-                    </ul>
-            </li>
-            <li>
-                <h2>발렌시아로고 레드 포프린 바람막이 자켓</h2>
-                    <ul>
-                        <li>2,249,000</li>
-                        <li>구매하기</li>
-                    </ul>
-            </li>
-            <li>
-                <h2>발렌시아가 브랙 스퀘어 카프스킨 토트백</h2>
-                    <ul>
-                        <li>1,765,000</li>
-                        <li>구매하기</li>
-                    </ul>
-            </li>
-            <li>
-                <h2>발렌시아가 클래식 베이스볼 캡</h2>
-                    <ul>
-                        <li>445,000</li>
-                        <li>구매하기</li>
-                    </ul> 
-            </li>
-        </ul>
+<section class="cummunity main-inner" id="community">
+    <h1>BALENCIAGA COMMUNITY</h1>
+    <div class="community__box">
+        <div class="community__gallery" id="community__gallery">
+            <ul>
+                <li>
+                    <img src="./img/community-img-1.jpg" alt="community-img1">
+                </li>
+                <li>
+                    <img src="./img/community-img-2.jpg" alt="community-img2">
+                </li>
+                <li>
+                    <img src="./img/community-img-3.jpg" alt="community-img3">
+                </li>
+                <li>
+                    <img src="./img/community-img-4.jpg" alt="community-img4">
+                </li>
+            </ul>
+        </div>
+        <div class="community__info" id="community__info">
+            <ul>
+                <li>
+                    <h2>발렌시아가 타탄 체크 자이언트 로고 더블 울 스카프 그린</h2>
+                        <ul>
+                            <li>820,000</li>
+                            <li><a href="#">구매하기</a></li>
+                        </ul>
+                </li>
+                <li>
+                    <h2>발렌시아로고 레드 포프린 바람막이 자켓</h2>
+                        <ul>
+                            <li>2,249,000</li>
+                            <li><a href="#">구매하기</a></li>
+                        </ul>
+                </li>
+                <li>
+                    <h2>발렌시아가 브랙 스퀘어 카프스킨 토트백</h2>
+                        <ul>
+                            <li>1,765,000</li>
+                            <li><a href="#">구매하기</a></li>
+                        </ul>
+                </li>
+                <li>
+                    <h2>발렌시아가 클래식 베이스볼 캡</h2>
+                        <ul>
+                            <li>445,000</li>
+                            <li><a href="#">구매하기</a></li>
+                        </ul> 
+                </li>
+            </ul>
+        </div>
     </div>
 </section>
 <!-- section.second-banner -->
