--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -4,26 +4,32 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!-- css -->
+<!-- CSS -->
 <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-<!-- jquery -->
+<!-- jQuery가 js 제일 상단에 위치 -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<!-- script.js -->
+<!-- JS -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<!-- 우리가 작성하는 js는 제일 아래 -->
 <script src="./js/script.js"></script>
+
 <title>BALENCIAGA</title>
 </head>
 <body>
 <!-- header -->
 <header class="header" id="header">
     <div class="main-logo">
-        <img src="./img/main-logo.png" alt="main-logo" class="flex">
+        <a href="#">
+            <img src="./img/main-logo.png" alt="main-logo" class="flex">
+        </a>
     </div>
     <div class="gnb__container">
         <ul class="gnb flex">
             <li class="gnb__item">
                 <a href="#" class="gnb__menu">
-                    <img src="./img/icon-shopping-bag.png" alt="shopping-bag-icon" class="icon">
+                    <i class="uil uil-shopping-bag"></i>
                 </a>
             </li>
             <li class="gnb__item">
@@ -132,23 +138,33 @@
             </li>
             <li class="gnb__item">
                 <a href="#" class="gnb__menu">
-                    <img src="./img/icon-search.png" alt="search-icon" class="icon">
+                    <i class="uil uil-search"></i>
                 </a>
             </li>
         </ul>
     </div>
 </header>
 <!-- section.mainbanner -->
-<section class="main__banner" id="main__banner">
-    <!-- <img src="./img/main-banner1.jpg" alt="mainBanner1"> -->
-    <!-- <img src="./img/main-banner2.jpg" alt="mainBanner2"> -->
-    <img src="./img/main-banner3.jpg" alt="mainBanner3">
+<section class="main__banner-box">
+    <!-- <i class="uil uil-angle-left"></i>
+    <i class="uil uil-angle-right"></i> -->
+    <div class="main__banner">
+        <div>
+            <img src="./img/main-banner1.jpg" alt="mainBanner1">
+        </div>
+        <div>
+            <img src="./img/main-banner2.jpg" alt="mainBanner2">
+        </div>
+        <div>
+            <img src="./img/main-banner3.jpg" alt="mainBanner3">
+        </div>
+    </div>
 </section>
 <!-- section.community -->
-<section class="cummunity main-inner" id="community">
+<section class="community main-inner" id="community">
     <h1>BALENCIAGA COMMUNITY</h1>
-    <div class="community__box">
-        <div class="community__gallery" id="community__gallery">
+    <div class="community__box main-inner">
+        <div class="community__col1" id="community__col1">
             <ul>
                 <li>
                     <img src="./img/community-img-1.jpg" alt="community-img1">
@@ -157,42 +173,50 @@
                     <img src="./img/community-img-2.jpg" alt="community-img2">
                 </li>
                 <li>
+                    <div class="community__desc">
+                        <h2>발렌시아가 브랙 스퀘어 카프스킨 토트백</h2>
+                        <div class="community__desc-price">
+                            <p>1,765,000</p>
+                            <a href="#">구매하기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="community__desc">
+                        <h2>발렌시아가 클래식 베이스볼 화이트 캡</h2>
+                        <div class="community__desc-price">
+                            <p>445,000</p>
+                            <a href="#">구매하기</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="community__col2" id="community__col2">
+            <ul>
+                <li>
                     <img src="./img/community-img-3.jpg" alt="community-img3">
                 </li>
                 <li>
                     <img src="./img/community-img-4.jpg" alt="community-img4">
                 </li>
-            </ul>
-        </div>
-        <div class="community__info" id="community__info">
-            <ul>
                 <li>
-                    <h2>발렌시아가 타탄 체크 자이언트 로고 더블 울 스카프 그린</h2>
-                        <ul>
-                            <li>820,000</li>
-                            <li><a href="#">구매하기</a></li>
-                        </ul>
+                    <div class="community__desc">
+                        <h2>발렌시아가 자이언트 로고 울 스카프 그린</h2>
+                        <div class="community__desc-price">
+                            <p>820,000</p>
+                            <a href="#">구매하기</a>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <h2>발렌시아로고 레드 포프린 바람막이 자켓</h2>
-                        <ul>
-                            <li>2,249,000</li>
-                            <li><a href="#">구매하기</a></li>
-                        </ul>
-                </li>
-                <li>
-                    <h2>발렌시아가 브랙 스퀘어 카프스킨 토트백</h2>
-                        <ul>
-                            <li>1,765,000</li>
-                            <li><a href="#">구매하기</a></li>
-                        </ul>
-                </li>
-                <li>
-                    <h2>발렌시아가 클래식 베이스볼 캡</h2>
-                        <ul>
-                            <li>445,000</li>
-                            <li><a href="#">구매하기</a></li>
-                        </ul> 
+                    <div class="community__desc">
+                        <h2>발렌시아로고 레드 포프린 바람막이 자켓</h2>
+                        <div class="community__desc-price">
+                            <p>2,249,000</p>
+                            <a href="#">구매하기</a>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -273,7 +297,7 @@
 <section class="online-service">
     <ul>
         <li>
-            <img src="./img/icon-package.png" alt="packageIcon" class="icon">
+            <i class="uil uil-gift"></i>
             <h3>무료배송</h3>
             <p>
                 발렌시아가는 모든 주문 건에 대해 무료로 배송 서비스를 제공합니다.
@@ -285,7 +309,7 @@
             </p>
         </li>
         <li>
-            <img src="./img/icon-giftbox.png" alt="giftboxIcon" class="icon">
+            <i class="uil uil-gift"></i>
             <h3>선물 포장</h3>
             <p>
                 고객님의 기프트는 발렌시아가 박스에 담겨 작성하신 개인 메시지와 함께 배송됩니다.
@@ -295,7 +319,7 @@
             </p>
         </li>
         <li>
-            <img src="./img/icon-replay.png" alt="replayIcon" class="icon">
+            <i class="uil uil-redo"></i>
             <h3>7일 이내 무료 반품</h3>
             <p>
                 제품 수령 후 7일 이내에 무료 반품이 가능합니다. 
@@ -337,9 +361,12 @@
                 <li>
                     <h2>SNS</h2>
                     <div class="footer__icon">
-                        <img src="./img/icon-facebook.png" alt="facebookImg" class="icon">
-                        <img src="./img/icon-twitter.png" alt="twitterImg" class="icon">
-                        <img src="./img/icon-instagram.png" alt="instagramImg" class="icon">
+                        <i class="uil uil-thumbs-up"></i>
+                        <i class="uil uil-twitter-alt"></i>
+                        <i class="uil uil-instagram"></i>
+                        <!-- <img src="./img/icon-facebook.png" alt="facebookImg" class="icon"> -->
+                        <!-- <img src="./img/icon-twitter.png" alt="twitterImg" class="icon"> -->
+                        <!-- <img src="./img/icon-instagram.png" alt="instagramImg" class="icon"> -->
                     </div>
                 </li>
             </ul>
