chainging css : community section

--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -25,6 +25,8 @@
             <img src="./img/main-logo.png" alt="main-logo" class="flex">
         </a>
     </div>
+
+
     <div class="gnb__container">
         <ul class="gnb flex">
             <li class="gnb__item">
@@ -163,62 +165,38 @@
 <!-- section.community -->
 <section class="community main-inner" id="community">
     <h1>BALENCIAGA COMMUNITY</h1>
-    <div class="community__box main-inner">
-        <div class="community__col1" id="community__col1">
-            <ul>
-                <li>
-                    <img src="./img/community-img-1.jpg" alt="community-img1">
-                </li>
-                <li>
-                    <img src="./img/community-img-2.jpg" alt="community-img2">
-                </li>
-                <li>
-                    <div class="community__desc">
-                        <h2>발렌시아가 브랙 스퀘어 카프스킨 토트백</h2>
-                        <div class="community__desc-price">
-                            <p>1,765,000</p>
-                            <a href="#">구매하기</a>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="community__desc">
-                        <h2>발렌시아가 클래식 베이스볼 화이트 캡</h2>
-                        <div class="community__desc-price">
-                            <p>445,000</p>
-                            <a href="#">구매하기</a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+    <div class="community__box main-inner flex">
+        <div class="community__gallery">
+            <img src="./img/community-img-1.jpg" alt="communityPhoto1">
+            <img src="./img/community-img-2.jpg" alt="communityPhoto2">
+            <img src="./img/community-img-3.jpg" alt="communityPhoto3">
+            <img src="./img/community-img-4.jpg" alt="communityPhoto4">
         </div>
-        <div class="community__col2" id="community__col2">
-            <ul>
-                <li>
-                    <img src="./img/community-img-3.jpg" alt="community-img3">
-                </li>
-                <li>
-                    <img src="./img/community-img-4.jpg" alt="community-img4">
-                </li>
-                <li>
-                    <div class="community__desc">
-                        <h2>발렌시아가 자이언트 로고 울 스카프 그린</h2>
-                        <div class="community__desc-price">
-                            <p>820,000</p>
-                            <a href="#">구매하기</a>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="community__desc">
-                        <h2>발렌시아로고 레드 포프린 바람막이 자켓</h2>
-                        <div class="community__desc-price">
-                            <p>2,249,000</p>
-                            <a href="#">구매하기</a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+        <div class="community__desc flex">
+            <a href="#">
+                <div class="community__desc_text flex-center">
+                    <h1>발렌시아가 자이언트 타탄 체크 자이언트 로고 더블 울 스카프 그린</h1>
+                    <p>820,000 구매하기</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="community__desc_text flex-center">
+                    <h1>발렌시아가 로고 레드 포프린 바람막이 자켓</h1>
+                    <p>2,249,900 구매하기</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="community__desc_text flex-center">
+                    <h1>발렌시아가 브랙 스퀘어 카프스킨 토트백</h1>
+                    <p>1,765,500 구매하기</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="community__desc_text flex-center">
+                    <h1>발렌시아가 클래식 베이스볼 캡</h1>
+                    <p>445,000 구매하기</p>
+                </div>
+            </a>
         </div>
     </div>
 </section>
