css : 간격, 폰트 사이즈 수정

--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -175,7 +175,7 @@
         <div class="community__desc flex">
             <a href="#">
                 <div class="community__desc_text flex-center li-box-style">
-                    <h1>발렌시아가 자이언트 타탄 체크 자이언트 로고 더블 울 스카프 그린</h1>
+                    <h1>발렌시아가 타탄 체크 자이언트 로고 더블 울 스카프 그린</h1>
                     <p>820,000 구매하기</p>
                 </div>
             </a>
@@ -193,7 +193,7 @@
             </a>
             <a href="#">
                 <div class="community__desc_text flex-center li-box-style">
-                    <h1>발렌시아가 클래식 베이스볼 캡</h1>
+                    <h1>발렌시아가 클래식 화이트 & 블랙 베이스볼 캡</h1>
                     <p>445,000 구매하기</p>
                 </div>
             </a>
@@ -254,7 +254,7 @@
                     <br>
                     <br>
                     <b><a href="#">더 알아보기</a></b>
-                    <br>
+                    <!-- <br> -->
                 </h1>
             </div>
         </li>
@@ -367,9 +367,15 @@
                         <div class="footer__icon">
                             <h2 class="footer__h2_margin">SNS</h2>
                             <div class="footer__icon_items">
-                                <i class="uil uil-thumbs-up"></i>
-                                <i class="uil uil-twitter-alt"></i>
-                                <i class="uil uil-instagram"></i>
+                                <a href="#">
+                                    <i class="uil uil-thumbs-up"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="uil uil-twitter-alt"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="uil uil-instagram"></i>
+                                </a>
                             </div>
                         </div>
             </div>
