--- a/1. Daegu-marathon/index.html
+++ b/1. Daegu-marathon/index.html
@@ -5,7 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="./css/style.css">
-<link rel="stylesheet" href="../1. Daegu-marathon/js/script.js">
+
+<!-- CSS -->
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+<!-- jQuery가 js 제일 상단에 위치 -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!-- JS -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<!-- 우리가 작성하는 js는 제일 아래 -->
+<script src="./js/script.js"></script>
+
+
 <title>대구국제마라톤</title>
 </head>
 <body>
@@ -19,10 +30,10 @@
             <div class="nav__container">
                 <ul class="nav__list flex">
                     <li class="nav__item">
-                        <a href="#" data-link="#home" class="navbar__menu nav__link">
+                        <a href="#" data-link="#home" class="nav__link">
                             대회안내
                         </a>
-                        <div class="navbar__submenu">
+                        <div class="nav__submenu">
                             <a href="#">인사말</a>
                             <a href="#">후원 및 협력</a>
                             <a href="#">참가자 유의사항</a>
@@ -32,7 +43,7 @@
                         <a href="#" data-link="#home" class="nav__link">
                             참가신청
                         </a>
-                        <div class="navbar__submenu">
+                        <div class="nav__submenu">
                             <a href="#">참가신청</a>
                             <a href="#">참가 신청 안내</a>
                             <a href="#">참가 신청 조회</a>
@@ -42,7 +53,7 @@
                         <a href="#" data-link="#home" class="nav__link">
                             코스
                         </a>
-                        <div class="navbar__submenu">
+                        <div class="nav__submenu">
                             <a href="#">하프코스</a>
                             <a href="#">10km</a>
                             <a href="#">마스터즈 부문</a>
@@ -52,7 +63,7 @@
                         <a href="#" data-link="#home" class="nav__link">
                             대회기록
                         </a>
-                        <div class="navbar__submenu">
+                        <div class="nav__submenu">
                             <a href="#">기록조회</a>
                         </div>
                     </li>
