adding css: main-banner

--- a/1. Daegu-marathon/index.html
+++ b/1. Daegu-marathon/index.html
@@ -9,6 +9,8 @@
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 <!-- jQuery가 js 제일 상단에 위치 -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <!-- JS -->
@@ -71,8 +73,24 @@
             </div>
         </div>
     </header>
-    <section class="home">
-
+    <section class="banner"></section>
+    <section class="home" id="home">
+        <div class="home__container">
+            <p>
+                5월 가정의 달
+                <br>
+                가족과 함께 Run & Fun
+            </p>
+            <h2 class="home__container_desc">
+                DAEGU INTERNATIONAL MARATHON
+            </h2>
+            <h2 class="home__container_date">
+                2021.05.01 - 05.31 언택트 레이스
+            </h2>
+        </div>
+    </section>
+    <section class="apply" id="apply">
+        
     </section>
 </body>
 </html>
