css, js: adding effect
1 대구마라톤 홈페이지 nav bar js 효과 적용, 컨텐츠, 푸터 추가

--- a/1. Daegu-marathon/index.html
+++ b/1. Daegu-marathon/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <!-- ======================= header ======================= -->
-    <header class="header" id="header">
+    <header class="header fixed" id="header">
         <div class="header-inner flex">
             <a href="#">
                 <img src="./img/logo_white.png" alt="logo-img">
@@ -89,8 +89,53 @@
             </h2>
         </div>
     </section>
-    <section class="apply" id="apply">
-        
+    <section class="apply flex" id="apply">
+        <div class="apply__box">
+            <img src="./img/apply_img_1.jpg" alt="참가신청안내바로가기" class="apply__img">
+            <div class="apply__desc">
+                <p>참가신청안내</p>
+                <a href="#">
+                    바로가기
+                </a>
+            </div>
+        </div>
+        <div class="apply__box">
+            <img src="./img/apply_img_2.jpg" alt="참가신청바로하기" class="apply__img">
+            <div class="apply__desc apply__semi_blue">
+                <p>참가신청</p>
+                <a href="#">
+                    바로하기
+                </a>
+            </div>
+        </div>
+        <div class="apply__box">
+            <img src="./img/apply_img_3.jpg" alt="참가신청조회바로가기" class="apply__img">
+            <div class="apply__desc">
+                <p>참가신청조회</p>
+                <a href="#">
+                    바로가기
+                </a>
+            </div>
+        </div>
     </section>
+
+    <footer class="footer" id="footer">
+            <address>
+                주최 : 대구광역시, 대한육상연맹 | 주관 : 대구광역시체육회, 대구육상연맹
+                <br>
+                (41542) 대구 북구 연암로 40(산격동) 113동 1층 대구국제마라톤
+                <br>
+                <a href="tel:053-355-3872">TEL : 053-355-3872</a>
+                <br>
+                <a href="mailto:marathon@daegusports.or.kr">E-mail : marathon@daegusports.or.kr</a>
+            </address>
+            <span>
+                COPYRIGHTS (C)2020 DAEGU SPORTS COUNCIL ALL RIGHTS RESERVED
+            </span>
+    </footer>
+
+    <!-- <div id="arrowUp" class="flex-center">
+        <i class="uil uil-arrow-up"></i>
+    </div> -->
 </body>
 </html>
