--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -336,7 +336,7 @@
     </ul>
 </section>
 <!-- footer -->
-<footer>
+<footer class="footer" id="footer">
     <ul class="footer__content footer-inner flex-center">
         <li>
             <img src="./img/main-logo-white.png" alt="main-logo" class="main-logo-white">
@@ -359,25 +359,25 @@
                 </ul>
             </div>
             <div class="footer__custom_service flex">
-                        <div class="footer__news">
-                            <h2 class="footer__h2_margin">뉴스레터 구독</h2>
-                            <input type="search" name="searchBox" id="searchBox">
-                            <button>신청하기</button>
+                    <div class="footer__news">
+                        <h2 class="footer__h2_margin">뉴스레터 구독</h2>
+                        <input type="search" name="searchBox" id="searchBox" placeholder="이메일을 입력해주세요..">
+                        <button>신청하기</button>
+                    </div>
+                    <div class="footer__icon">
+                        <h2 class="footer__h2_margin">SNS</h2>
+                        <div class="footer__icon_items">
+                            <a href="https://www.facebook.com/Balenciaga/">
+                                <i class="uil uil-thumbs-up"></i>
+                            </a>
+                            <a href="https://twitter.com/balenciaga">
+                                <i class="uil uil-twitter-alt"></i>
+                            </a>
+                            <a href="https://www.instagram.com/balenciaga/">
+                                <i class="uil uil-instagram"></i>
+                            </a>
                         </div>
-                        <div class="footer__icon">
-                            <h2 class="footer__h2_margin">SNS</h2>
-                            <div class="footer__icon_items">
-                                <a href="#">
-                                    <i class="uil uil-thumbs-up"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="uil uil-twitter-alt"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="uil uil-instagram"></i>
-                                </a>
-                            </div>
-                        </div>
+                    </div>
             </div>
         </li>
     </ul>
